@startuml

title DAP - P4 - Eduardo Barrios - Patrón Estado\n

  namespace state_pattern.GUI {
    class state_pattern.GUI.GUI {
    }
  }
  

  namespace state_pattern.states {
    class state_pattern.states.BlinkingGreen {
    }
  }
  

  namespace state_pattern.states {
    class state_pattern.states.OnGreen {
    }
  }
  

  namespace state_pattern.states {
    class state_pattern.states.OnOrange {
    }
  }
  

  namespace state_pattern.states {
    class state_pattern.states.OnRed {
    }
  }
  

  namespace state_pattern.states {
    interface state_pattern.states.State {
    }
  }
  

  namespace state_pattern.traffic_light_system {
    class state_pattern.traffic_light_system.TrafficLight {
    }
  }
  

  state_pattern.GUI.GUI o-- state_pattern.traffic_light_system.TrafficLight : trafficLightsVertical
  state_pattern.states.BlinkingGreen .up.|> state_pattern.states.State
  state_pattern.states.BlinkingGreen o-- state_pattern.traffic_light_system.TrafficLight : trafficLight
  state_pattern.states.OnGreen .up.|> state_pattern.states.State
  state_pattern.states.OnGreen o-- state_pattern.traffic_light_system.TrafficLight : trafficLight
  state_pattern.states.OnOrange .up.|> state_pattern.states.State
  state_pattern.states.OnOrange o-- state_pattern.traffic_light_system.TrafficLight : trafficLight
  state_pattern.states.OnRed .up.|> state_pattern.states.State
  state_pattern.states.OnRed o-- state_pattern.traffic_light_system.TrafficLight : trafficLight
  state_pattern.traffic_light_system.TrafficLight o-- state_pattern.states.State : state


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
